ZGC: Crash in ZRemembered::scan_page_and_clear_remset

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 24
    • Affects Version/s: 24
    • Component/s: hotspot
    • gc
    • b25
    • Verified

      applications/jcstress/memeffects.java run with -XX:+UseZGC crashed

      # SIGSEGV (0xb) at pc=0x00007f1ed0c46eb0, pid=3651343, tid=3651349
      #
      # JRE version: Java(TM) SE Runtime Environment (24.0+1) (fastdebug build 24-jep483+1-9)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 24-jep483+1-9, mixed mode, sharing, tiered, compressed class ptrs, z gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x1aa9eb0] ZRemembered::scan_page_and_clear_remset(ZPage*) const+0x250
      #


      --------------- T H R E A D ---------------

      Current thread (0x00007f1ec8105c40): WorkerThread "ZWorkerYoung#0" [id=3651349, stack(0x00007f1ecc32d000,0x00007f1ecc42d000) (1024K)]

      Stack: [0x00007f1ecc32d000,0x00007f1ecc42d000], sp=0x00007f1ecc42bb20, free space=1018k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1aa9eb0] ZRemembered::scan_page_and_clear_remset(ZPage*) const+0x250 (bitMap.hpp:152)
      V [libjvm.so+0x1aac1d4] ZRememberedScanMarkFollowTask::work_inner()+0x324 (zRemembered.cpp:517)
      V [libjvm.so+0x1aab35a] ZRememberedScanMarkFollowTask::work()+0x1a (zRemembered.cpp:549)
      V [libjvm.so+0x19863a0] WorkerThread::run()+0x80 (workerThread.cpp:70)
      V [libjvm.so+0x183a476] Thread::call_run()+0xb6 (thread.cpp:234)
      V [libjvm.so+0x151ab98] thread_native_entry(Thread*)+0x128 (os_linux.cpp:858)

      siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x0000000000005118

      Registers:
      RAX=0x0000000000000000, RBX=0x00007f19f80041b0, RCX=0x0000000000001000, RDX=0x0000000000000a23
      RSP=0x00007f1ecc42bb20, RBP=0x00007f1ecc42bbf0, RSI=0x0000000000040000, RDI=0x00007f19f8004230
      R8 =0x00007f1ed13978e8, R9 =0x0000000000000041, R10=0x00007f1ed13370f0, R11=0x0000000000000000
      R12=0x0000000000000000, R13=0x0000000000000000, R14=0x0000000000040000, R15=0x00007f19f8004230
      RIP=0x00007f1ed0c46eb0, EFLAGS=0x0000000000010283, CSGSFS=0x002b000000000033, ERR=0x0000000000000004
        TRAPNO=0x000000000000000e


            Assignee:
            Axel Boldt-Christmas
            Reporter:
            Ekaterina Pavlova
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: