8343460: ZGC: Crash in ZRemembered::scan_page_and_clear_remset